--- a/main-project/styles.css
+++ b/main-project/styles.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
+    min-width: 400px;
 }
 
 input {
@@ -18,4 +19,11 @@ button {
     background: #5f9341;;
     color: white;
     font-weight: bold;
+}
+
+ul, li, a {
+    color: #5f9341;
+    list-style: none;
+    padding: 0;
+    margin: 25px 0 0 0;
 }
